--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -31,13 +31,7 @@
     <ClCompile Include="Source\OBJAnimation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\PlayerStat.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source\shader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ToolSection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\ToolUI.cpp">
@@ -91,6 +85,9 @@
     <ClCompile Include="source\MobGhost.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Explorer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -126,16 +123,10 @@
     <ClInclude Include="Source\OBJAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\PlayerStat.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\shader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ToolSection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\ToolUI.h">
@@ -172,6 +163,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\MobGhost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Explorer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
