-Added transition between Scene1A and Scene1B. -Fixed  and cleaned up cpp and h files for Scene1B(made them into a workable state) -Added mobbossone header file -Temporary fix of memory leaks by commenting out ScrollWheel function

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\GlobalVariables.h" />
+    <ClInclude Include="source\MobBossOne.h" />
     <ClInclude Include="source\MobGhost.h" />
     <ClInclude Include="source\SceneLevelOneA.h" />
     <ClInclude Include="source\SceneLevelOneB.h" />
