--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="Source\Explorer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\MobBossOne.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\LightSource.fragmentshader">
