--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -22,6 +22,8 @@
     <ClCompile Include="source\SceneLevelOneA.cpp" />
     <ClCompile Include="source\SceneLevelOneB.cpp" />
     <ClCompile Include="Source\SceneLevelOneBRenders.cpp" />
+    <ClCompile Include="source\SceneLevelTwo.cpp" />
+    <ClCompile Include="source\SceneLevelTwoRenders.cpp" />
     <ClCompile Include="Source\SceneStart.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Camera3.cpp" />
@@ -46,6 +48,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\GlobalVariables.h" />
+    <ClInclude Include="source\SceneLevelTwo.h" />
     <ClInclude Include="source\MobBossOne.h" />
     <ClInclude Include="source\MobGhost.h" />
     <ClInclude Include="source\SceneLevelOneA.h" />
