--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -100,6 +100,9 @@
     <ClCompile Include="source\SceneLevelTwoRenders.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneOpening.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -187,6 +190,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\SceneLevelTwo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneOpening.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
