--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="source\MobBossOne.cpp" />
     <ClCompile Include="source\MobGhost.cpp" />
     <ClCompile Include="Source\Music.cpp" />
+    <ClCompile Include="Source\OpeningCutScene.cpp" />
     <ClCompile Include="source\SceneLevelOneARenders.cpp" />
     <ClCompile Include="source\SceneEndRenders.cpp" />
     <ClCompile Include="source\SceneLevelOneA.cpp" />
@@ -52,6 +53,7 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\GlobalVariables.h" />
     <ClInclude Include="Source\Music.h" />
+    <ClInclude Include="Source\OpeningCutScene.h" />
     <ClInclude Include="Source\SceneOpening.h" />
     <ClInclude Include="source\SceneLevelTwo.h" />
     <ClInclude Include="source\MobBossOne.h" />
