--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="source\MobGhost.cpp" />
     <ClCompile Include="Source\Music.cpp" />
     <ClCompile Include="Source\OpeningCutScene.cpp" />
+    <ClCompile Include="Source\OpeningCutScene2.cpp" />
     <ClCompile Include="source\SceneLevelOneARenders.cpp" />
     <ClCompile Include="source\SceneEndRenders.cpp" />
     <ClCompile Include="source\SceneLevelOneA.cpp" />
@@ -54,6 +55,7 @@
     <ClInclude Include="Source\GlobalVariables.h" />
     <ClInclude Include="Source\Music.h" />
     <ClInclude Include="Source\OpeningCutScene.h" />
+    <ClInclude Include="Source\OpeningCutScene2.h" />
     <ClInclude Include="Source\SceneOpening.h" />
     <ClInclude Include="source\SceneLevelTwo.h" />
     <ClInclude Include="source\MobBossOne.h" />
